# BAIN

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
lecture_1/: main.py
lecture_2/: main.py
lecture_4/: main.py
lecture_5/: main.py
