[project]
name = "bain"
version = "0.1.0"
description = "BAIN Unicorn University course hometasks"
authors = [
    {name = "Tetiana Velehura", email = "velegura00@gmail.com"}
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "ruff (>=0.15.1)",
    "mypy (>=1.15.0)"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "S"]

[tool.mypy]
strict = true
